--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
                         </button>
                     </li>
                     <li>
-                        <button class="header-button" type="button" onclick="window.location.href='/gestor/login'">
+                        <button class="header-button" id="logoutBtn">
                             <img src="/images/logout.svg" alt="Logout" class="icon"> Logout
                         </button>
                     </li>
@@ -124,7 +124,7 @@
                     <p><strong>Tipo Operacao</strong>: <span id="detalhesServico"></span></p>
                     <p><strong>Modelo drone</strong>: <span id="detalhesDrone"></span></p>
                     <p><strong>Colaborador</strong>: <span id="detalhesColaborador"></span></p>
-                    <p id="detalhesPdfLink" style="display: none;"><a id="detalhesPdf" href="" target="_blank">VER PDF</a></p>
+                    <p id="detalhesPdfLink" style="display: none;"><a id="detalhesPdf" href="" target="_blank">MAPA COMPLETO</a></p>
                 </div>
             </div>
         </div>
