--- a/public/css/farm_u.css
+++ b/public/css/farm_u.css
@@ -54,7 +54,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #007bff;
+    color: #999999;
 }
 
 .perfil-btn {
@@ -128,3 +128,113 @@ nav ul li a:hover {
     display: block;
 }
 
+/* Estilo para lista de fazendas */
+.fazendas-list {
+    margin: 0 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Espaçamento entre os elementos da lista */
+}
+
+.fazenda-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.fazenda-imagem {
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+.fazenda-info {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    justify-content: space-between; /* Alinha os elementos extremos */
+}
+
+.fazenda-nome {
+    font-size: 18px;
+    font-weight: bold;
+    flex: 2; /* Dá espaço proporcional ao nome */
+}
+
+.fazenda-acoes {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Espaçamento entre todos os botões */
+}
+
+.pdf-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4CAF50; /* Cor de fundo */
+    color: #fff; /* Cor do texto */
+    text-decoration: none;
+    padding: 8px 12px; /* Ajuste para harmonizar com os outros botões */
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.pdf-button img {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+}
+
+.pdf-button:hover {
+    background-color: #45a049;
+    transform: scale(1.05);
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    margin: 0 50px 20px;
+    gap: 10px;
+}
+
+.search-bar {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    font-size: 16px;
+    outline: none;
+}
+
+.search-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.search-button img {
+    width: 20px;
+    height: 20px;
+}
+
+/* Container do botão Nova Fazenda */
+.nova-fazenda-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
+}
+
+.hidden {
+    display: none;
+}
