--- a/public/css/home.css
+++ b/public/css/home.css
@@ -54,7 +54,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #007bff;
+    color: #999999;
 }
 
 .perfil-btn {
@@ -360,4 +360,21 @@ nav ul li a:hover {
 
 .pdf-button:hover {
     background-color: #28a745;
+}
+
+/* Estilo para o link "MAPA COMPLETO" */
+#detalhesPdfLink a {
+    display: inline-block;
+    color: #ffffff;
+    background-color: #4CAF50;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#detalhesPdfLink a:hover {
+    background-color: #45a049;
+    transform: translateY(-2px);
 }
