--- a/public/css/user.css
+++ b/public/css/user.css
@@ -54,7 +54,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #007bff;
+    color: #999999;
 }
 
 .form-container {
@@ -211,4 +211,13 @@ nav ul li a:hover {
 
 .usuarios-btn:active {
     transform: scale(0.95); /* Reduz um pouco o tamanho ao clicar */
+}
+
+.error-message {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px;
 }
