--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,6 +29,14 @@
                 <button type="submit">Logar</button>
             </div>
         </form>
+
+        <!-- Adicionando o botão 'VERSÃO USUÁRIO' abaixo do formulário -->
+        <div class="user-button-container">
+            <a href="/usuario/login">
+                <button class="user">VERSÃO USUÁRIO</button>
+            </a>
     </div>
+
+    
 </body>
 </html>
