--- a/views/login_u.ejs
+++ b/views/login_u.ejs
@@ -28,6 +28,11 @@
                 <button type="submit">Logar</button>
             </div>
         </form>
+
+        <div class="user-button-container">
+            <a href="/gestor/login">
+                <button class="user">VERSÃO GESTOR</button>
+            </a>
     </div>
 
 </body>
