--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,7 +7,6 @@ body {
     grid-template-columns: 50% 50%; 
 }
 
-
 .image-side {
     background-image: url('/images/fundo_login.svg');
     background-size: cover;
@@ -15,15 +14,14 @@ body {
     height: 100vh; 
 }
 
-
 .container {
     display: flex;
+    flex-direction: column; /* Coloca os elementos em coluna */
     justify-content: center;
     align-items: center;
     background-color: #f5f5f5; 
     height: 100vh; 
 }
-
 
 form {
     display: flex;
@@ -35,7 +33,7 @@ form {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     width: 500px;
     height: 400px;
-    border: solid px #258A26;
+    border: solid 1px #258A26;
     border-radius: 10px;
 }
 
@@ -51,16 +49,14 @@ label {
     font-weight: 600;
 }
 
-
 input {
     width: 480px;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 12px;
-    background-color: #E8E8E8;
+    background-color: #f6f6f6;
 }
-
 
 .button-group {
     width: 100%; 
@@ -81,4 +77,27 @@ input {
 
 .button-group button:hover {
     background-color: #8bc73d; 
+}
+
+/* Estilos para o botão VERSÃO USUÁRIO */
+.user-button-container {
+    margin-top: 20px; /* Espaço entre o formulário e o botão */
+    display: flex;
+    justify-content: center; /* Alinha o botão no centro */
+    width: 100%;
+}
+
+.user {
+    width: 200px;
+    padding: 10px;
+    background-color: #F9E525; 
+    color: white;
+    border: 1px solid #f7de0088;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.user:hover {
+    background-color: #ffb700;
 }
