--- a/views/farm.ejs
+++ b/views/farm.ejs
@@ -36,7 +36,7 @@
                         </button>
                     </li>
                     <li>
-                        <button class="header-button" type="button" onclick="window.location.href='/gestor/login'">
+                        <button class="header-button" id="logoutBtn">
                             <img src="/images/logout.svg" alt="Logout" class="icon"> Logout
                         </button>
                     </li>
@@ -78,7 +78,7 @@
                         <label for="pdfFazenda">PDF do Mapa da Fazenda:</label>
                         <input type="file" id="pdfFazenda" name="pdfFazenda" accept=".pdf" required>
                     </div>
-                    <button type="submit" class="fazenda-submit-btn">Salvar Fazenda</button>
+                    <button type="submit" class="fazenda-submit-btn">SALVAR FAZENDA</button>
                 </form>
             </div>
         </div>
@@ -261,6 +261,12 @@
 
     // Evento de input na barra de pesquisa
     document.getElementById('searchInput').addEventListener('input', filtrarFazendas);
+
+    // Função para fazer o logout
+    document.getElementById('logoutBtn').onclick = function() {
+            // Redireciona para a rota de logout
+            window.location.href = '/gestor/logout';
+        };
     </script>
 </body>
 </html>
