--- a/views/home_u.ejs
+++ b/views/home_u.ejs
@@ -29,7 +29,7 @@
             <div class="modal-content">
                 <ul>
                     <li>
-                        <button class="header-button" type="button" onclick="window.location.href='/usuario/login'">
+                        <button class="header-button" id="logoutBtn">
                             <img src="/images/logout.svg" alt="Logout" class="icon"> Logout
                         </button>
                     </li>
@@ -181,6 +181,12 @@
 
     // Atualiza automaticamente ao digitar
     document.getElementById('searchInput').addEventListener('input', filtrarServicos);
+
+     // Função para fazer o logout
+     document.getElementById('logoutBtn').onclick = function() {
+            // Redireciona para a rota de logout
+            window.location.href = '/gestor/logout';
+        };
     </script>
 </body>
 </html>
